// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SchemaEngine should match snapshot for valid and fallback: fallback-structured-intent 1`] = `
{
  "_meta": {
    "allFields": [
      "business_type",
      "primary_goal",
      "tone",
      "challenges",
      "motivator",
    ],
    "conflictDetected": false,
    "emotionalAnchorPresent": false,
    "errors": [
      "business_type is required.",
      "primary_goal is required.",
      "Tone 'unknown' is not in the allowed whitelist.",
      "motivator is required.",
    ],
    "fallbackSummary": "Intent: ",
    "hasMotivationHook": false,
    "injectedFields": [],
    "intentConfidence": 0.5,
    "usedSparkSignal": false,
    "usedVisionCatcher": false,
    "validationPassed": false,
  },
  "business_type": {
    "confidence": 0.5,
    "errorState": false,
    "overrideable": true,
    "source": "rules",
    "value": "",
    "wasConfirmed": false,
  },
  "challenges": {
    "confidence": 0.5,
    "errorState": false,
    "overrideable": true,
    "source": "rules",
    "value": [],
    "wasConfirmed": false,
  },
  "motivator": {
    "confidence": 0.5,
    "errorState": false,
    "overrideable": true,
    "source": "rules",
    "value": "unknown",
    "wasConfirmed": false,
  },
  "primary_goal": {
    "confidence": 0.5,
    "errorState": false,
    "overrideable": true,
    "source": "rules",
    "value": "",
    "wasConfirmed": false,
  },
  "tone": {
    "confidence": 0.5,
    "errorState": false,
    "overrideable": true,
    "source": "rules",
    "value": "unknown",
    "wasConfirmed": false,
  },
}
`;

exports[`SchemaEngine should match snapshot for valid and fallback: valid-structured-intent 1`] = `
{
  "_meta": {
    "allFields": [
      "business_type",
      "primary_goal",
      "tone",
      "challenges",
      "motivator",
    ],
    "conflictDetected": false,
    "emotionalAnchorPresent": false,
    "errors": [],
    "fallbackSummary": "Intent: SaaS, goal: Grow users, tone: professional, motivator: impact",
    "hasMotivationHook": false,
    "injectedFields": [],
    "intentConfidence": 0.9,
    "usedSparkSignal": false,
    "usedVisionCatcher": false,
    "validationPassed": true,
  },
  "business_type": {
    "confidence": 0.9,
    "errorState": false,
    "overrideable": true,
    "source": "rules",
    "value": "SaaS",
    "wasConfirmed": false,
  },
  "challenges": {
    "confidence": 0.9,
    "errorState": false,
    "overrideable": true,
    "source": "rules",
    "value": [
      "competition",
    ],
    "wasConfirmed": false,
  },
  "motivator": {
    "confidence": 0.9,
    "errorState": false,
    "overrideable": true,
    "source": "rules",
    "value": "impact",
    "wasConfirmed": false,
  },
  "primary_goal": {
    "confidence": 0.9,
    "errorState": false,
    "overrideable": true,
    "source": "rules",
    "value": "Grow users",
    "wasConfirmed": false,
  },
  "tone": {
    "confidence": 0.9,
    "errorState": false,
    "overrideable": true,
    "source": "rules",
    "value": "professional",
    "wasConfirmed": false,
  },
}
`;
